--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <h1>환영합니다! 메인페이지입니다.</h1>
+  <h1>환영합니다!</h1>
 
   <a href="signup.html" class="btn">회원가입</a>
   <a href="about.html" class="btn">자기소개</a>
