--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <a href="about.html" class="btn">자기소개</a>
 
   <div class="character">
-    <img src="molang_main.png" alt="몰랑이 캐릭터" />
+    <img src="molang_main.jpg" alt="몰랑이 캐릭터" />
     <p>귀여운 몰랑이가 여러분을 기다리고 있답니다!</p>
   </div>
 
