--- a/about.html
+++ b/about.html
@@ -128,6 +128,18 @@ body {
       color: tomato;
     }
 
+.team-logo {
+  width: 60px;
+  height: auto;
+  margin-left: 30px;
+  vertical-align: middle;
+  transition: transform 0.2s ease;
+}
+
+.team-logo:hover {
+  transform: scale(1.1);
+}
+
   </style>
 </head>
   <div class="section">
@@ -138,54 +150,96 @@ body {
   </div>
 
   <div class="section">
-    <p>제 사진입니다.</p>
+    <h3>본인 사진</h3>
     <img src="kang.jpg" width="150" height="200" alt="kang">
     <hr>
-    <h3>재학 중인 한성대학교 마크</h3>
+    <h3>그리고 본인이 재학하고 있는 한성대학교 마크</h3>
     <img src="https://www.hansung.ac.kr/sites/hansung/images/common/NEW_Logo_2.png" width="150" height="30" alt="hansung u">
   </div>
 
   <div class="section">
     <h3>간단한 소개</h3>
     <ol type="I">
-      <li>좋아하는 음식: 고기류
-        <ul>
-          <li>소고기</li>
-          <li>돼지고기</li>
-          <li>닭고기</li>
-          <li>오리고기</li>
-        </ul>
-      </li>
+    <li>응원하는 스포츠 팀
+      <ul>
+        <li>
+          (KBO) SSG 랜더스
+          <a href="https://www.ssglanders.com/" target="_blank">
+            <img src="SSG.png" alt="SSG 랜더스 로고" class="team-logo">
+          </a>
+        </li>
+        <li>
+          (MLB) LA 다저스
+          <a href="https://www.mlb.com/dodgers" target="_blank">
+            <img src="LAD.jpg" alt="LA 다저스 로고" class="team-logo">
+          </a>
+        </li>
+      </ul>
+    </li>
+      </ul>
+    </li>
 
     <hr>
-      <li>취미: 영화보기</li>
+      <li>취미: 영화관에 가서 영화보기</li>
+          <a href="https://www.megabox.co.kr/" target="_blank">
+            <img src="megabox.png" alt="메가박스" class="team-logo">
+          </a>
+          <a href="https://www.lottecinema.co.kr/NLCHS" target="_blank">
+            <img src="lotte.png" alt="롯데시네마" class="team-logo">
+          </a>
+          <a href="https://www.cgv.co.kr/" target="_blank">
+            <img src="cgv.png" alt="CGV" class="team-logo">
+          </a>
+         
+   <div style="margin-top: 20px;"></div>       
+
       <ul>
+        <li>(2023년 관람) 콘크리트 유토피아</li>
         <li>(2024년 관람) 파묘</li>
         <li>(2024년 관람) 범죄도시4</li>
         <li>(2024년 관람) 그녀가 죽었다</li>  
         <li>(2024년 관람) 행복의 나라</li>
         <li>(2024년 관람) 베테랑2</li>
-        <li>(2024년 관람) 구룡성채</li>
-        <li>(2024년 관람) 조커2</li>
+        <li>(2024년 관람) 조커 : 폴리 아 되</li>
+        <li>(2024년 관람) 구룡성채 : 무법지대</li>
         <li>(2024년 관람) 글래디에이터2</li>
         <li>(2025년 관람) 미키17</li>
         <li>(2025년 관람) 첫 번째 키스</li>
+        <li>(2025년 관람) 콘클라베</li>
         <li>(2025년 관람) 승부</li>
         <li>(2025년 관람) 로비</li>
-        <li>(2025년 관람) 너의 췌장을 먹고 싶어(재개봉)</li>
+        <li>(2025년 관람) 너의 췌장을 먹고 싶어 (재개봉)</li>
         <li>(2025년 관람) 야당</li>
-        <li>(2025년 관람) 소주전쟁</li>
+        <li>(2025년 관람) 파과</li>
         <li>(2025년 관람) 썬더볼츠*</li>
+        <li>(2025년 관람) 소주전쟁</li>
+        <li>(2025년 관람) 드래곤 길들이기</li>
+        <li>(2025년 관람) 라이언 일병 구하기 (재개봉)</li>
       </u>
 </div>
-        <div class="section">
-  <h3>나를 닮은 캐릭터</h3>
+<div class="section">
+  <h3>좋아하는 캐릭터 (그러고 나를 닮은)</h3>
 
-  <div class="character-box">
-    <img src="molang.jpg" alt="몰랑" class="character-img">
-    <span>(귀여운) 몰랑이</span>
+  <div class="character-wrapper">
+    <div class="character-box">
+      <img src="molang.jpg" alt="몰랑" class="character-img">
+      <span class="character-name">반가워하는 몰랑이</span>
+    </div>
+    
+    <div class="character-box">
+      <img src="shiningmolang.png" alt="몰랑 반짝이" class="character-img">
+      <span class="character-name">눈부시도록 귀여운 몰랑이</span>
+    </div>
+    <div class="character-box">
+      <img src="cutemolang.png" alt="몰랑 심쿵" class="character-img">
+      <span class="character-name">심쿵유발 몰랑이</span>
+    </div>
+  </div>
+</div>
+
   </div>
 
+  <div class="section">
   <h3>자기소개 끝</h3>
   <p>마무리 Thanks 글자에 마우스를 올려 보세요</p>
   <hr>
