--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
  
     width: 90%;
     max-width: 500px;
-    margin: 20px auto; /* 중앙 정렬 및 위쪽 여백 */
+    margin: 20px auto; /* 중앙 정렬  */
     background: linear-gradient(135deg, #f0f8ff);
     padding: 15px;
     text-align: center;
@@ -235,7 +235,7 @@ body {
     <img src="molang_main.jpg" alt="몰랑이 캐릭터" />
     <p>귀여운 몰랑이가 여러분을 기다리고 있었답니다!</p>
 </div>
-<a href="about.html" class="btn">자기소개 보러가기!</a>
+<a href="about.html" class="btn">자기소개 보러가기</a>
 
 <div class="container">
   <div class="login-container">
