--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>메인페이지</title>
+  <title>2506020</title>
   <style>
 body {
     font-family: Arial, sans-serif;
@@ -233,7 +233,7 @@ body {
 
     <div class="character">
     <img src="molang_main.jpg" alt="몰랑이 캐릭터" />
-    <p>귀여운 몰랑이가 여러분을 기다리고 있었답니다!</p>
+    
 </div>
 <a href="about.html" class="btn">자기소개 보러가기</a>
 
