--- a/about.html
+++ b/about.html
@@ -168,8 +168,16 @@ body {
             <img src="SSG.png" alt="SSG 랜더스 로고" class="team-logo">
           </a>
         </li>
+        
         <li>
-          (MLB) LA 다저스
+          (NPB) 후쿠오카 소프트뱅크 호크스
+          <a href=https://www.softbankhawks.co.jp/ target="_blank">
+            <img src="HSH.jpg" alt="소프트뱅크 호크스 로고" class="team-logo">
+          </a>
+        </li>
+        
+        <li>
+          (MLB) 로스엔젤레스 다저스
           <a href="https://www.mlb.com/dodgers" target="_blank">
             <img src="LAD.jpg" alt="LA 다저스 로고" class="team-logo">
           </a>
@@ -208,17 +216,17 @@ body {
         <li>(2025년 관람) 콘클라베</li>
         <li>(2025년 관람) 승부</li>
         <li>(2025년 관람) 로비</li>
-        <li>(2025년 관람) 너의 췌장을 먹고 싶어 (재개봉)</li>
+        <li>(2025년 관람) 너의 췌장을 먹고 싶어 : 재개봉판</li>
         <li>(2025년 관람) 야당</li>
         <li>(2025년 관람) 파과</li>
         <li>(2025년 관람) 썬더볼츠*</li>
         <li>(2025년 관람) 소주전쟁</li>
         <li>(2025년 관람) 드래곤 길들이기</li>
-        <li>(2025년 관람) 라이언 일병 구하기 (재개봉)</li>
+        <li>(2025년 관람) 라이언 일병 구하기 : 재개봉판</li>
       </u>
 </div>
 <div class="section">
-  <h3>좋아하는 캐릭터 (그러고 나를 닮은)</h3>
+  <h3>캐릭터 특별 소개!</h3>
 
   <div class="character-wrapper">
     <div class="character-box">
