--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@ body {
         <li>
           (NPB) 후쿠오카 소프트뱅크 호크스
           <a href=https://www.softbankhawks.co.jp/ target="_blank">
-            <img src="HSH.jpg" alt="소프트뱅크 호크스 로고" class="team-logo">
+            <img src="FSH.jpeg" alt="소프트뱅크 호크스 로고" class="team-logo">
           </a>
         </li>
         
@@ -226,7 +226,7 @@ body {
       </u>
 </div>
 <div class="section">
-  <h3>캐릭터 특별 소개!</h3>
+  <h3>애정하는 캐릭터 소개</h3>
 
   <div class="character-wrapper">
     <div class="character-box">
