--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@ body {
   <div class="section">
     <h3>간단한 소개</h3>
     <ol type="I">
-    <li>응원하는 스포츠 팀
+    <li>응원하는 프로야구 스포츠 팀
       <ul>
         <li>
           (KBO) SSG 랜더스
