--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>2506020</title>
+  <title>2506020 강성주</title>
   <style>
 body {
     font-family: Arial, sans-serif;
