--- a/signup.html
+++ b/signup.html
@@ -222,8 +222,8 @@ input[type="submit"]:hover {
     <input type="checkbox" id="interest-other" name="interest" value="other"> <label for="interest-other">기타</label><br><br>
 
     <label>가입:</label><br>
-    <input type="radio" id="source-friend" name="source" value="friend"> <label for="source-friend">직접 보기 위해 사이트 주소 복사함</label><br>
-    <input type="radio" id="source-ad" name="source" value="ad"> <label for="source-ad">몰랑이를 찾아 해매다 이곳에 도달함</label><br>
+    <input type="radio" id="source-friend" name="source" value="friend"> <label for="source-friend">(직접 보기 위해서) 사이트 주소를 입력해서 옴</label><br>
+    <input type="radio" id="source-ad" name="source" value="ad"> <label for="source-ad">몰랑이를 찾아 해매다가 이곳에 도달함</label><br>
     <input type="radio" id="source-search" name="source" value="search"> <label for="source-search">그냥</label><br><br>
 
     <input type="submit" value="가입하기">
