--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,7 @@
     text += "생년월일 : " + form.birth.value + "\n";
     text += "성별 : " + form.gender.value + "\n";
 
+    
     const interests = [];
     form.querySelectorAll('input[name="interest"]:checked').forEach(el => {
       interests.push(el.value);
@@ -29,32 +30,35 @@
     alert(text);
   }
 
- function calculateAge() {
-    const birthInput = document.getElementById('birth').value;
-    const ageSpan = document.getElementById('ageDisplay');
+    function calculateAge() {
+      const birthInput = document.getElementById('birth').value;
+      const ageSpan = document.getElementById('ageDisplay');
 
-    if (birthInput) {
-      const birthDate = new Date(birthInput);
-      const today = new Date();
+      if (birthInput) {
+        const birthDate = new Date(birthInput);
+        const today = new Date();
 
-      let age = today.getFullYear() - birthDate.getFullYear();
-      const monthDiff = today.getMonth() - birthDate.getMonth();
-      const dayDiff = today.getDate() - birthDate.getDate();
+        let age = today.getFullYear() - birthDate.getFullYear();
+        const monthDiff = today.getMonth() - birthDate.getMonth();
+        const dayDiff = today.getDate() - birthDate.getDate();
 
-      if (monthDiff < 0 || (monthDiff === 0 && dayDiff < 0)) {
-        age--;
+        if (monthDiff < 0 || (monthDiff === 0 && dayDiff < 0)) {
+          age--;
+        }
+
+        ageSpan.textContent = `나이: ${age}세`;
+      } else {
+        ageSpan.textContent = '나이: ';
       }
-
-      ageSpan.textContent = `나이: ${age}세`;
-    } else {
-      ageSpan.textContent = '';
     }
-  }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      calculateAge(); // 페이지 불러올 때 한 번 더 실행
+    });
   
 </script>
-    
-<style> 
-   
+    <style> 
+
 body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
@@ -216,15 +220,15 @@ input[type="submit"]:hover {
     </select><br><br>
 
     <label>관심사:</label><br>
-    <input type="checkbox" id="interest-coding" name="interest" value="coding"> <label for="interest-coding">독서</label><br>
-    <input type="checkbox" id="interest-reading" name="interest" value="reading"> <label for="interest-reading">영상물 시청</label><br>
-    <input type="checkbox" id="interest-sports" name="interest" value="sports"> <label for="interest-sports">스포츠 경기 관람</label><br>
+    <input type="checkbox" id="interest-coding" name="interest" value="coding"> <label for="interest-coding">코딩</label><br>
+    <input type="checkbox" id="interest-reading" name="interest" value="reading"> <label for="interest-reading">독서</label><br>
+    <input type="checkbox" id="interest-sports" name="interest" value="sports"> <label for="interest-sports">스포츠</label><br>
     <input type="checkbox" id="interest-other" name="interest" value="other"> <label for="interest-other">기타</label><br><br>
 
-    <label>방문 이유:</label><br>
-    <input type="radio" id="source-friend" name="source" value="friend"> <label for="source-friend">(직접 보기 위해서) 사이트 주소를 입력해서 옴</label><br>
-    <input type="radio" id="source-ad" name="source" value="ad"> <label for="source-ad">몰랑이를 찾아 해매다가 이곳에 도달함</label><br>
-    <input type="radio" id="source-search" name="source" value="search"> <label for="source-search">그냥</label><br><br>
+    <label>가입:</label><br>
+    <input type="radio" id="source-friend" name="source" value="friend"> <label for="source-friend">친구 추천</label><br>
+    <input type="radio" id="source-ad" name="source" value="ad"> <label for="source-ad">웹페이지 광고</label><br>
+    <input type="radio" id="source-search" name="source" value="search"> <label for="source-search">검색</label><br><br>
 
     <input type="submit" value="가입하기">
   </form>
