--- a/signup.html
+++ b/signup.html
@@ -220,15 +220,16 @@ input[type="submit"]:hover {
     </select><br><br>
 
     <label>관심사:</label><br>
-    <input type="checkbox" id="interest-coding" name="interest" value="coding"> <label for="interest-coding">코딩</label><br>
-    <input type="checkbox" id="interest-reading" name="interest" value="reading"> <label for="interest-reading">독서</label><br>
-    <input type="checkbox" id="interest-sports" name="interest" value="sports"> <label for="interest-sports">스포츠</label><br>
+    <input type="checkbox" id="interest-watching" name="interest" value="watching"> <label for="interest-coding">영화, 유튜브 등 영상물 시청</label><br>
+    <input type="checkbox" id="interest-sports" name="interest" value="sports"> <label for="interest-reading">스포츠 경기 관람</label><br>
+    <input type="checkbox" id="interest-coding" name="interest" value="coding"> <label for="interest-sports">코딩하기</label><br>
+    <input type="checkbox" id="interest-reading" name="interest" value="reading"> <label for="interest-sports">독서</label><br>  
     <input type="checkbox" id="interest-other" name="interest" value="other"> <label for="interest-other">기타</label><br><br>
 
-    <label>가입:</label><br>
-    <input type="radio" id="source-friend" name="source" value="friend"> <label for="source-friend">친구 추천</label><br>
-    <input type="radio" id="source-ad" name="source" value="ad"> <label for="source-ad">웹페이지 광고</label><br>
-    <input type="radio" id="source-search" name="source" value="search"> <label for="source-search">검색</label><br><br>
+    <label>방문 경로:</label><br>
+    <input type="radio" id="source-find" name="source" value="find"> <label for="source-find">직접 주소를 입력해서 방문</label><br>
+    <input type="radio" id="source-wander" name="source" value="wander"> <label for="source-wander">몰랑이를 찾아 해매다가 이 사이트에 도달</label><br>
+    <input type="radio" id="source-other" name="source" value="other"> <label for="source-other">그냥</label><br><br>
 
     <input type="submit" value="가입하기">
   </form>
