--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>자기소개</title>
+  <title>2506020 자기소개</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -266,4 +266,6 @@ body {
       elem.classList.toggle('hidden');
     }
   </script>
-  </body>
+
+</body>
+  </html>
