--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body {
     text-align: center;
     padding: 50px;
     background: #f0f8ff;
-    padding-bottom: 100px;
+    padding-bottom: 100px; 
     min-height: 100vh;
 }
     h1 {
@@ -224,7 +224,6 @@ body {
   box-sizing: border-box; 
 }
 
-
   </style>
 </head>
 <body>
@@ -236,6 +235,9 @@ body {
     
 </div>
 <a href="about.html" class="btn">자기소개 보러가기</a>
+<br>
+<br>
+<a href="event.html" class="btn">홈페이지에 사용한 이벤트 목록</a>
 
 <div class="container">
   <div class="login-container">
