--- a/event.html
+++ b/event.html
@@ -86,7 +86,7 @@
 
     <hr>
 
-    <p><strong>이 외에도 여러 이벤트가 사용되었지만 공간의 효율을 위해 이만 줄입니다.</strong></p>
+    <p><strong>이 외에도 여러 이벤트가 사용되었지만, 공간의 효율을 위해 이만 줄입니다.</strong></p>
   </main>
 
   <footer>
